@@ -18,12 +18,16 @@ WriteMakefile(
 	'Capture::Tiny' => 0,
 	'DateTime' => 0,
 	# 'Test::Kwalitee' => 0,
+	'IO::Uncompress::Brotli' => 0,
+	'autodie' => 0,
+	'IPC::System::Simple' => 0,
     },
     PREREQ_PM => {
 	'Carp' => 0,
 	'CGI::Info' => 0.51,
 	'CSS::Packer' => 0,
 	'Compress::Zlib' => 0,
+	'IO::Compress::Brotli' => 0,
 	'Digest::MD5' => 0,
     	'Encode' => 0,
 	# 'HTML::Clean' => 0.8,
