@@ -2,6 +2,7 @@ Revision history for FCGI-Buffer
 
 0.08
 	Print stack trace when calling init too late
+	Support Brotli
 
 0.07	Sat Dec  5 15:03:56 EST 2015
 	Fix RT110011
